--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         }
 	],
     "require": {
+        "swiftmailer/swiftmailer": "5.3.*@dev",
+        "phpoffice/phpexcel": "dev-master"
 	},
     "autoload": {
         "psr-4": {
