--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 	],
     "require": {
         "swiftmailer/swiftmailer": "5.3.*@dev",
-        "nesbot/carbon": "dev-master",
+        "nesbot/carbon": "1.20.0",
         "phpoffice/phpexcel": "dev-master"
 	},
     "autoload": {
